Update AdFSApplication.java